Implement contact management with CRUD endpoints, service, repository, and mapping